--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="facebook_app_id">1897289204022516</string>
     <string name="fb_login_protocol_scheme">fb1897289204022516</string>
     <string name="facebook_client_token">56789</string>
+    <string name="login">Login</string>
 
 </resources>
